Release v1.0.0
Squashed commit of the following:

commit 57180ae72a7615952e7dce60ad1c469ba6c3a38a
Author: Jose V. Trigueros <j.v.trigueros@gmail.com>
Date:   Sun Feb 25 18:42:40 2018 -0700

    Update Docker Hub README

commit 45564c85b74f030b940631dc0fd3cca12d045c6c
Author: Jose V. Trigueros <j.v.trigueros@gmail.com>
Date:   Sun Feb 25 18:35:32 2018 -0700

    Update version in pom and bot's game info